--- a/EDAhotelbooking.ipynb
+++ b/EDAhotelbooking.ipynb
@@ -6,7 +6,7 @@
       "name": "EDAhotelbooking.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyObTSapud1vn8OTO4CKgcJg",
+      "authorship_tag": "ABX9TyOOzCgZw/fQ58F0vwFYbme+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2335,7 +2335,45 @@
     {
       "cell_type": "code",
       "source": [
-        "df.groupby(['country', 'arrival_date_year']).count()"
+        "df.country.value_counts()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yOnjBEYLTQPH",
+        "outputId": "0666a18d-2a19-437d-8e6e-154f8cedd921"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "PRT    48590\n",
+              "GBR    12129\n",
+              "FRA    10415\n",
+              "ESP     8568\n",
+              "DEU     7287\n",
+              "       ...  \n",
+              "DJI        1\n",
+              "BWA        1\n",
+              "HND        1\n",
+              "VGB        1\n",
+              "NAM        1\n",
+              "Name: country, Length: 177, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "coun_arri_df=df.groupby(['country', 'arrival_date_year']).count()\n",
+        "coun_arri_df\n"
       ],
       "metadata": {
         "colab": {
@@ -2343,9 +2381,9 @@
           "height": 519
         },
         "id": "D11NC_gONo7N",
-        "outputId": "8a0cb685-b6fe-44f2-92db-78742bdcca8c"
+        "outputId": "606219ee-c504-49b9-8e18-4161e1af35af"
       },
-      "execution_count": 34,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2467,7 +2505,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-43134925-186f-4b17-8c55-383a3d6dcbf8\">\n",
+              "  <div id=\"df-4c12224b-e832-414e-9f61-e953f69d016e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2811,7 +2849,7 @@
               "</table>\n",
               "<p>398 rows × 30 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-43134925-186f-4b17-8c55-383a3d6dcbf8')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4c12224b-e832-414e-9f61-e953f69d016e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2862,12 +2900,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-43134925-186f-4b17-8c55-383a3d6dcbf8 button.colab-df-convert');\n",
+              "          document.querySelector('#df-4c12224b-e832-414e-9f61-e953f69d016e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-43134925-186f-4b17-8c55-383a3d6dcbf8');\n",
+              "          const element = document.querySelector('#df-4c12224b-e832-414e-9f61-e953f69d016e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2890,7 +2928,63 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "coun_arri_df.max()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "daGMdRfWUh6H",
+        "outputId": "9d49730b-ba22-4e9b-e949-a777e0b45823"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "hotel                             22321\n",
+              "is_canceled                       22321\n",
+              "lead_time                         22321\n",
+              "arrival_date_month                22321\n",
+              "arrival_date_week_number          22321\n",
+              "arrival_date_day_of_month         22321\n",
+              "stays_in_weekend_nights           22321\n",
+              "stays_in_week_nights              22321\n",
+              "adults                            22321\n",
+              "children                          22321\n",
+              "babies                            22321\n",
+              "meal                              22321\n",
+              "market_segment                    22321\n",
+              "distribution_channel              22321\n",
+              "is_repeated_guest                 22321\n",
+              "previous_cancellations            22321\n",
+              "previous_bookings_not_canceled    22321\n",
+              "reserved_room_type                22321\n",
+              "assigned_room_type                22321\n",
+              "booking_changes                   22321\n",
+              "deposit_type                      22321\n",
+              "agent                             17325\n",
+              "company                            2211\n",
+              "days_in_waiting_list              22321\n",
+              "customer_type                     22321\n",
+              "adr                               22321\n",
+              "required_car_parking_spaces       22321\n",
+              "total_of_special_requests         22321\n",
+              "reservation_status                22321\n",
+              "reservation_status_date           22321\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
         }
       ]
     },
